# $Id$

0.09 - Sun May 11 22:00:00 CST 2002
	+ Removed dependencies on Test::Manifest, Test::Prereq and
	  File::Find::Rule.

0.08 - Sun Dec  1 20:55:09 CST 2002
	+ fixed minor doc formatting bug
	
0.07 - Tue Nov 26 21:51:49 CST 2002
	+ AppleScript is turned on if we're on a Mac
	
0.06 - Tue Nov 26 13:35:06 CST 2002
	+ Mac::AppleScript is optional
	+ use default startup volume name if not AppleScript