@@ -7,16 +7,16 @@ use Mac::Path::Util;
 my $Startup = Mac::Path::Util::STARTUP;
 
 my $util = Mac::Path::Util->new();
-$util->use_applescript(0);
+$util->use_carbon(0);
 isa_ok( $util, 'Mac::Path::Util' );
 
 my $startup = $util->_get_startup;
 is( $startup, $Startup, '_get_startup returns right name' );
 
-$util->use_applescript(1);
+$util->use_carbon(1);
 $util->clear_startup;
 
-my $startup = $util->_get_startup;
+$startup = $util->_get_startup;
 diag( "\nThis test is just for fun\n",
-	"You need Mac::AppleScript to make it discover the true name\n",
+       "You need Mac::Carbon to make it discover the true name\n",
 	"I think your startup volume name is  [$startup]\n" );
